sventon change history
-----------------------------------------------------------------------------------------

[717] Release 1.1 RC2 (2006-11-06)
[715] Fixed: Bug #9356 - More than one entry must be selected for zip download
      Fixed: Bug #9367 - More than one entry must be selected for view thumbnails
[713] Fixed: Bug #9323 - Parse error in oc4j
[712] Fixed: Bug #9315 - RSS feed.

[705] Release 1.1 RC1 (2006-10-30)
[699] Added: Upgraded to JavaSVN 1.1.0beta5.
[677] Added: Feature #2751 - Update the caches one by one.
[651] Added: Feature #2670 - Possibility to expand flattened dirs.
[611] Added: Feature #1570 - Support for multiple repositories.
[600] Fixed: Bug #8371 - Misspelled revision parameter in logs view.
      Fixed: Bug #8370 - Revision parameter forgotten in back-link.
[594] Added: Feature #2417 - Search result order by.
[591] Added: Feature #2420 - File extension filtering in repobrowser.
[590] Added: Feature #1868 - Unified diff view.
[563] Added: Feature #2259 - Revision info cache.
[552] Added: Upgraded to JavaSVN 1.1.0beta2.
[546] Fixed: Redesign of entry cache.
      Added: Feature #2175 - Commit message cache using Lucene.
      Added: Upgraded to ehcache 1.2.
      Added: Upgraded to JavaSVN 1.1.0b.

[582] Release 1.0.0 (2006-07-03)
[575] Fixed: Bug #7985 - Tooltip text wrap in browser view.
[573] Fixed: Bug #7983 - View log for a file renders incorrect navigation.

[544] Release 1.0 RC4 (2006-05-28)
[520] Fixed: Bug #7229 - Latest commit info not shown.
[519] Fixed: Bug #7230 - Wrong revision in links from 'latest commit info' box.

[513] Release 1.0 RC3 (2006-04-16)
[509] Fixed: Bug #7136 - The path link contains Chinese still doesn't work.
[501] Added: Upgraded to JavaSVN 1.0.4.
[499] Fixed: Bug #7000 - Chinese characters in file name doesn't work.

[496] Release 1.0 RC2 (2006-04-02)
[477] Added: Possibility to diff entries in browser and search result view.
[468] Added: Feature #1871 - Possibility to disable index.